<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context="com.project.miniactivities.miniactivitat6.MainActivity">

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:id="@+id/viewMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryText"
        android:layout_gravity="center"
        android:visibility="invisible"/>
    <EditText
        android:id="@+id/messageFirebase"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:hint="@string/write_text_here"
        android:inputType="textAutoCorrect"
        android:visibility="invisible"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear2"
        android:layout_marginTop="15dp"
        android:layout_below="@id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <Button
            android:id="@+id/btnSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:visibility="invisible"/>
        <Button
            android:id="@+id/btnReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/write_default_greeting_message_to_realtime_db"
            android:visibility="invisible"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">
        <EditText
            android:id="@+id/txtEmail"
            android:layout_marginTop="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>
        <EditText
            android:id="@+id/txtPassword"
            android:layout_below="@id/txtEmail"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:inputType="textPassword"/>
        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_alignBaseline="@+id/btnLogin"
            android:layout_alignBottom="@+id/btnLogin"
            android:layout_toStartOf="@+id/btnLogout" />
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginBottom="172dp"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/btnLogout" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:layout_alignTop="@+id/btnLogin"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="68dp"
            android:id="@+id/btnLogout"
            android:visibility="invisible"/>
    </RelativeLayout>
</RelativeLayout>
